# musinsa-ranking-api

./: .gitignore  README.md  main.py  pyproject.toml
app/: crawler.py  exceptions.py  main.py  parser.py  schemas.py
app/rankings/: crawler.py  errors.py  parser.py  router.py  service.py
tests/: test_rankings_api.py  test_rankings_crawler.py  test_rankings_parser.py  test_rankings_service.py
